--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -8,4 +8,5 @@
 \noindent
 \noindent
 
-I express my sincere thanks to my advisor Prof. Mohamed Eltabakh. My thank you goes to the members of my Ph.D. committee, Prof. Elke Rundensteiner, Prof. Xiangnan Kong and Dr. Yuanyuan Tian. My thank you also goes to all other previous and current DSRG members for their useful discussion and feedback. 
+I would like to express my sincere thanks to my advisor Prof. Mohamed Eltabakh. Without his guidance and support, this work would not have been possible. I am grateful to Prof. Xiangnan Kong for always being patient and being there for our discussion. My thank you also goes to Prof. Elke rundensteiner and Dr. YuanYuan Tian for serving on my dissertation committee and their insightful comments. I owe much to my friends and all the DSRG members for having the valuable conversations on my works and sharing many laughs as well as frustrations. 
+
