--- a/aug.bib
+++ b/aug.bib
@@ -261,7 +261,55 @@
   title={The union-split algorithm and cluster-based anonymization of social networks},
   doi={10.1145/1533057.1533088},
   author={Thompson, Brian and Yao, Danfeng},
-  isbn={9781605583945},
-  publisher={acm},
+  journal={ASIACCS},
   year={2009}
 }
+
+% publication in submission 
+@inproceedings{DegreeAUG,
+  author    = {Dongqing Xiao and
+               Mohamed Y. Eltabakh and
+               Xiangnan Kong
+               },
+  title     = {Reliability-Preserving Anonymization on Uncertain Graphs},
+  journal	={SIGMOD}
+}
+
+@article{Backstrom2011,
+ author = {Backstrom, Lars and Dwork, Cynthia and Kleinberg, Jon},
+ title = {Wherefore Art Thou R3579X?: Anonymized Social Networks, Hidden Patterns, and Structural Steganography},
+ journal = {WWW},
+ number = {12},
+ month = dec,
+ year = {2011},
+ pages = {133--141},
+ numpages = {9}
+} 
+
+@inproceedings{Narayanan2009,
+ author = {Narayanan, Arvind and Shmatikov, Vitaly},
+ title = {De-anonymizing Social Networks},
+ year = {2009},
+ isbn = {978-0-7695-3633-0},
+ pages = {173--187},
+ journal={SP}
+} 
+
+
+@inproceedings{Jorgensen2016,
+ author = {Jorgensen, Zach and Yu, Ting and Cormode, Graham},
+ title = {Publishing Attributed Social Graphs with Formal Privacy Guarantees},
+ journal = {SIGMOD},
+ year = {2016},
+ pages = {107--122},
+ numpages = {16}
+}
+
+@book{Nagle_EWNI_2012,
+  year={2012},
+  title={{EWNI:} Efficient Anonymization of Vulnerable Individuals in Social Networks},
+  author={Nagle, Frank and Singh, Lisa and {Gkoulalas-Divanis,} Aris},
+  journal ={Advances in Knowledge Discovery and Data Mining.}
+}
+
+
