--- a/bermuda.bib
+++ b/bermuda.bib
@@ -411,3 +411,15 @@
   	year      = {2015},
   	pages = {425--440}
 }
+
+% publication 
+@article{bermuda,
+  author    = {Dongqing Xiao and
+               Mohamed Y. Eltabakh and
+               Xiangnan Kong},
+  title     = {Bermuda: An Efficient MapReduce Triangle Listing Algorithm for Web-Scale
+               Graphs},
+  Journal   = {SSDBM},
+  pages     = {10:1--10:12},
+  year      = {2016}
+}
